@@ -1,5 +1,9 @@
 === HEAD
 
+* Model#setter_methods private method now accepts 1 argument instead of 2 (jeremyevans)
+
+* Model#set_restricted and #update_restricted private methods now accept 2 arguments instead of 3 (jeremyevans)
+
 * ungraphed on an eager_graph dataset now resets the original row_proc (jeremyevans)
 
 * eager_graph now returns a naked dataset (jeremyevans)
